add api loader styles

--- a/src/assets/scss/foundation/_variables.scss
+++ b/src/assets/scss/foundation/_variables.scss
@@ -12,5 +12,6 @@ $fontfamily: 'Roboto', -apple-system, "Helvetica Neue", "ヒラギノ角ゴ Pro 
 // z-map
 $z-map: (
   header,
-  footer
+  footer,
+  apiLoader,
 );
