--- a/src/assets/scss/global.scss
+++ b/src/assets/scss/global.scss
@@ -1,3 +1,7 @@
 @import "@/assets/scss/foundation/_variables";
 @import "@/assets/scss/foundation/_functions";
 @import "@/assets/scss/foundation/_mixins";
+
+body {
+  margin : 0;
+}
